# reCAPTCHA-Solver

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  services.py  visualization.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: on_push.yaml
abstracts/: CustomModel.py
app/: services.py
app/guiAgent/: guiAgent.py
app/imageProcessing/: dataTransform.py  imageProcessor.py  imageProcessorFactory.py  ocr.py
app/imageProcessing/concreteProcessors/: baseImageProcessor.py
app/imageProcessing/imageProcessors/: imageProcessorFactory.py  initialImageProcessor.py
app/imageProcessors/: imageProcessorFactory.py
app/mouseMovement/: mouseContext.py  mouseEngine.py
app/mouseMovement/movementStategies/: base.py  pathStrategy.py  vectoredStrategy.py
docker/: Dockerfile  docker-compose.yaml  index.html
guiAgent/: guiAgent.py
gui_agent/: GuiAgent.py  guiAgent.py
gym/captchas/: train.py  trainTestSplit.py
gym/captchas/model/: modelMulti.py  modelSingle.py
gym/captchas/models/: modelTools.py
gym/captchas/models/multi/: dataset.py  (+2 more)
gym/mouse/: mouseEngine.py  mouseLogger.py  train.py
gym/mouse/model/: dataset.py  gan.py  train.py  trainLoop.py
imageProcessing/: imageProcessor.py  ocr.py
model/: model.py  train.py  trainTestSplit.py  train_test_split.py  trainer.ipynb  visualizeData.py
models/: gan.py  model.py  modelTools.py  train.py  trainTestSplit.py
models/model/: modelMulti.py  modelSingle.py
mouseEngine/: MouseEngine.py  mouseEngine.py  mouseLogger.py
mouseEngine/model/: train.py
(+6 files in other folders)
